# ludamus

./: .dockerignore  .env  .env.development  .env.docker  .env.e2e  .env.schema  .env.test  .gitignore  .markdownlint-cli2.jsonc  .npmrc  .oxfmtrc.json  .pre-commit-config.yaml  .prettierignore  .prettierrc  .pylintrc  .taplo.toml  CHANGELOG.md  CLAUDE.md  EMAIL_TESTING_PLAN.md  EVENT_PAGE_ISSUES.md  IMPROVEMENT_PLAN.md  PANEL_FIXES_PLAN.md  PAPERCUTS.md  PLAN.md  PLAN_PROPOSAL_PANEL_CRUD.md  PLAN_REMOVE_LEGACY_TAGS_NEEDS.md  PLAN_UNIFY.md  PROBLEMS.md  PRODUCT.md  PR_TODOS.md  Procfile.dev  README.md  RELEASE_NOTES.md  TODO.md  aube-lock.yaml  aube-workspace.yaml  codecov.yml  facilitator-crud.qa.md  hk.pkl  mise.sandbox.toml  (+7 more)
.agents/skills/minimalist-ui/: SKILL.md
.claude/: .gitignore  settings.json
.claude/commands/: tbd-card.md  tbd-fire.md  tbd-plan.md  tbd-refine.md  tbd-shape.md  tbd-story.md
.claude/hooks/: session-start.sh
.claude/skills/friction-log/: SKILL.md
.claude/skills/glimpse/: SKILL.md
.claude/skills/issue-maker/: SKILL.md
.claude/skills/logo-grade/: SKILL.md
.claude/skills/ponytail/: SKILL.md
.claude/skills/product-design/: SKILL.md
.claude/skills/thermo-nuclear-code-quality-review/: SKILL.md
.github/workflows/: audit.yml  build-image.yml  ci.yml  deploy-production-coolify.yml  deploy-production.yml  deploy-staging-coolify.yml  deploy-staging.yml  github-staging.yml  mobile.yml  mutation.yml  staging-dispatch.yml
.herenow/: state.json
docker/: Dockerfile  mise.toml
docker/compose/: local.yaml  prod.yaml
docs/: CODE_LAYOUT.md  DEPLOYMENT.md  LOCAL_DEV.md  PLAN_VENUES_FLATTEN.md  TESTING_STRATEGY.md  durable-execution-evaluation.md  logo-research.md
docs/agents/: architecture.md  mcp.md  sandbox.md  services-migration.md  testing-assertions.md
docs/audits/: typescript-standards-audit-2026-06-19.md
docs/branding/: logo-pitch.html  logo-research.md
docs/design/accept-proposal/: README.md
docs/features/: CHECKLIST.md  README.md
docs/plans/: lazy-load-session-modals.md
docs/refactors/: README.md  glimpse-strangler.md  htmx-adoption.md  links-db-layout.md  pacts-mills-split.md  panel-object-scope-authz.md  scoped-query-boundaries.md  services-di.md  target-architecture.md
docs/rfc/: 0001-party.md  0002-party-membership.md  README.md
docs/standards/: typescript.md
pkl/: Builtins.pkl  Config.pkl  Types.pkl  UserConfig.pkl
pkl/builtins/: actionlint.pkl  alejandra.pkl  aqua_update_checksum.pkl  asciidoctor.pkl  astro.pkl  betterleaks.pkl  biome.pkl  black.pkl  brakeman.pkl  buf_format.pkl  buf_lint.pkl  buildifier_format.pkl  buildifier_lint.pkl  bundle_audit.pkl  byte_order_marker.pkl  cargo_check.pkl  cargo_clippy.pkl  cargo_fmt.pkl  check_added_large_files.pkl  check_byte_order_marker.pkl  check_case_conflict.pkl  check_conventional_commit.pkl  check_executables_have_shebangs.pkl  check_merge_conflict.pkl  check_symlinks.pkl  clang_format.pkl  cmake_format.pkl  cocogitto_commit_msg.pkl  contextlint.pkl  cpp_lint.pkl  dclint.pkl  deadnix.pkl  deno.pkl  deno_check.pkl  detect_private_key.pkl  dprint.pkl  editorconfig-checker.pkl  erb.pkl  err_check.pkl  eslint.pkl  (+99 more)
pkl/builtins/test/: helpers.pkl
plans/: 001-event-page-n-plus-one.md  001-trust-boundary-client-ip.md  002-ci-dependency-audit.md  002-oauth-next-open-redirect.md  003-context-processor-query-dedup.md  003-deterministic-factory-slugs.md  004-coverage-mills-blindspot.md  004-membership-log-pii.md  005-docs-drift-cleanup.md  005-panel-view-boilerplate.md  006-embed-site-in-sphere-dto.md  006-regression-guardrails.md  007-csp-report-only.md  008-batch-waitlist-promotion-queries.md  009-fix-prefetch-defeated-by-order-by.md  010-dependency-pin-hygiene.md  011-ci-dependency-caching.md  012-parallelize-python-tests.md  013-remove-dead-oauth-csrf-field.md  014-docs-toolchain-glossary.md  015-migrate-current-user-to-services.md  016-delete-read-site-and-site-id.md  017-enrollment-characterization-tests.md  018-enrollment-skip-level-and-cancel-without-config.md  019-csp-enforcement-path.md  019-schedule-all-days-side-by-side.md  README.md
rules/: icon-btn-accessible-name.yml  no-faker-slug.yml  no-inline-theme-var.yml  no-transition-all.yml
scripts/: auth0-simulator-dev  dev  dev-portless-child  ensure-gettext.sh  github-staging.mts  github-staging.test.mts  impeccable_lint.py  reproduce-ios-modal-bugs.ts  reproduce-ios-scrubber-longpress.ts  sandbox-bootstrap  shitcheck.sh  varlock
scripts/ios-regressions/: harness.ts  modal.test.ts  scrubber-longpress.test.ts
src/ludamus/client/: .fallowrc.json  .oxfmtrc.json  .oxlintrc.json  auth0-simulator-dev.cjs  eslint.config.js  oxlint.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/ludamus/edges/: manage.py  settings.py  (+1 more)
tests/: conftest.py  template_checks.py
tests/e2e/: .auth-state-waiter.json  .gitignore  package-lock.json  package.json  playwright.config.ts
tests/integration/: conftest.py  factories.py  test_dbos_offer_scheduler.py  test_dbos_scheduler.py  test_models.py  test_party_backfill.py  utils.py
tests/unit/: test_announcements_service.py  test_anonymous_enrollment_service.py  test_bookmarks_service.py  test_chronology_mills.py  test_content_change_diff.py  test_crowd_auth_service.py  test_crowd_claim_service.py  test_crowd_profile_service.py  test_dbos_smoke.py  test_discounts_export_service.py  test_discounts_service.py  test_enrollment_service.py  test_enrollment_settings_service.py  test_event_panel_service.py  test_facilitator_panel_mill.py  test_host_personal_data_service.py  test_mcp_registry.py  test_mills.py  test_models.py  test_no_negative_margins.py  test_notifications_service.py  test_panel_proposals_mill.py  test_panel_template_theme_tokens.py  test_party_service.py  test_printing_mills.py  test_qr.py  test_session_self_edit_service.py  test_shadowban_service.py  test_sites_mills.py  test_slugs_mill.py  test_specs_chronology.py  test_specs_enrollment.py  test_staticfiles.py  test_url_recovery.py  test_venues_mills.py  test_waitlist_promotion_service.py
(+930 files in other folders)
