[project]
name = "ludamus"
version = "0.1.0"
description = "Event management website"
authors = [
    { name = "Radosław Ganczarek", email = "radoslaw@ganczarek.in" },
    { name = "hasparus", email = "hasparus@gmail.com" },
    { name = "lprasol", email = "lprasol@gmail.com" },
]
license = { text = "BSD-3-Clause license" }
readme = "README.md"
requires-python = ">=3.14.0,<3.15"
dynamic = ['dependencies']

[project.urls]
homepage = "https://zagrajmy.net/"
repository = "https://github.com/zagrajmy/ludamus"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
authlib = "~1.7.0"
cryptography = "^48.0.0"
django = "~6.0.0"
django-environ = "^0.13.0"
django-extensions = "^4.1"
django-vite = "==3.1.0"
google-auth = "^2.52.0"
gunicorn = "^26.0.0"
heroicons = { version = "^2.9", extras = ["django"] }
markdown = "^3.10.2"
nh3 = "^0.3.5"
pillow = "^12.1.1"
psycopg = "^3.2.9"
pydantic = "^2.11.7"
requests = "^2.32.5"
segno = "^1.6.6"
whitenoise = "^6.12.0"
django-storages = {extras = ["google"], version = "^1.14.6"}

[tool.poetry.group.dev.dependencies]
black = "^26.1.0"
codespell = "^2.4.1"
deptry = "^0.25.1"
django-browser-reload = "^1.21.0"
django-debug-toolbar = "^6.0.0"
django-stubs = "^6.0.1"
djlint = "^1.36.4"
factory-boy = "^3.3.3"
faker = "^40.1.0"
freezegun = "^1.5.2"
honcho = "^2.0.0"
ipython = "^9.9.0"
mypy = "^2.0.0"
pip-audit = "^2.10.0"
pre-commit = "^4.5.1"
pylint = "^4.0.3"
pytest = "^9.0.1"
pytest-cov = "^7.0.0"
pytest-django = "^4.11.1"
pytest-factoryboy = "^2.8.1"
pytest-freezeblaster = "^2.0.4"
responses = "^0.26.0"
ruff = "^0.15.15"
types-authlib = "^1.5.0.20250516"
types-requests = "^2.32.4.20250809"

# BLACK
diff-cover = "^10.2.0"
import-linter = "^2.11"
vulture = "^2.16"
pytest-gremlins = "^1.8.1"
django-coverage-plugin = "^3.2.2"

[tool.black]
line-length = 88
preview = true
skip-magic-trailing-comma = true
target-version = ['py314']

# CODESPELL

[tool.codespell]
skip = 'node_modules,tests/e2e,*.po,*.lock,package-lock.json,vendor,src/ludamus/gates/web/django/theme/static_src/package-lock.json,CLAUDE.md'
# 'fallow' is the frontend analysis tool, not a misspelling of 'follow'
ignore-words-list = 'fallow'

# COVERAGE

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "src/ludamus/edges/*",
    "src/ludamus/adapters/db/django/migrations/*",
    "src/ludamus/client/*",
    "tests/template_checks.py",
]
sigterm = true
plugins = ["django_coverage_plugin"]
core = "ctrace"

[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 2

[tool.coverage.django_coverage_plugin]
template_extensions = 'html'

# DJLINT

[tool.djlint]
ignore = "H021,H031,H037,D018"
custom_blocks = "select"

# DEPTRY

[tool.deptry]
known_first_party = ["ludamus"]

[tool.deptry.per_rule_ignores]
DEP002 = [
    "django-extensions",
    "django-vite",
    "gunicorn",
    "heroicons",
    "honcho",
    "psycopg",
    "pillow",
    "whitenoise",
    "django-storages"
]
DEP004 = ["debug_toolbar"]

# MYPY

[tool.mypy]
check_untyped_defs = true
color_output = true
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_expr = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
exclude = ["migrations/.*.py", "tests/.*.py"]
extra_checks = true
implicit_reexport = true
plugins = ["mypy_django_plugin.main", "pydantic.mypy"]
pretty = true
python_version = "3.14"
strict = true
strict_equality = true
strict_equality_for_none = true
warn_incomplete_stub = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.django-stubs]
django_settings_module = "ludamus.edges.settings"

[[tool.mypy.overrides]]
module = ["debug_toolbar.toolbar"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["environ"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["markdown"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "ludamus.adapters.db.django.*",
    "ludamus.adapters.web.django.*",
    "ludamus.edges.settings",
    "ludamus.gates.web.django.*",
    "ludamus.links.db.django.*",
    "ludamus.links.ticket_api",
    "ludamus.links.google_docs",
]
disallow_any_expr = false

[[tool.mypy.overrides]]
module = ["ludamus.adapters.web.django.*", "ludamus.gates.web.django.*"]
disallow_any_explicit = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true

# RUFF

[tool.ruff]
fix = false
line-length = 88
output-format = 'concise'
preview = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Unused
    "COM",
    "CPY",
    "D1",
    "FIX",
    "TD003",
    # Left to fix
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "PLR0915", # Too many statements
    "PLR0914", # Too many local variables
    "PLR1702", # Too many nested blocks
    "EM101",   # Exception must not use a string literal, assign to variable first
    "TRY003",  # Avoid specifying long messages outside the exception class
]

[tool.ruff.lint.per-file-ignores]
"*/migrations/**.py" = [
    "ANN",    # flake8-annotations
    "ARG001", # Unused arguments
    "E501",   # Line too long
    "RUF012", # ClassVar
]
"tests/**.py" = [
    "ANN",     # flake8-annotations
    "INP001",  # implicit namespace package
    "PLR0913", # too-many-arguments
    "PLR0917", # too-many-positional-arguments
    "S",       # bandit
    "PLR0904", # Too many public methods
    "PLR6301", # Method could be a function
]

[tool.ruff.lint.flake8-pytest-style]
parametrize-values-type = "tuple"

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.pydocstyle]
convention = "pep257"

# PYTEST

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "ludamus.edges.settings"

[tool.pytest-gremlins]
paths = ["src"]

exclude = ["**/migrations/*"]

report = ["console", "json"]

# IMPORT LINTER

[tool.importlinter]
include_external_packages = "True"
root_package = "ludamus"

# Explanation <source_modules> can't import <forbidden_modules>

[[tool.importlinter.contracts]]
name = "gates"
type = "forbidden"
source_modules = ["ludamus.gates"]
forbidden_modules = ["ludamus.links", "ludamus.inits", "ludamus.edges"]


[[tool.importlinter.contracts]]
name = "links"
type = "forbidden"
source_modules = ["ludamus.links"]
forbidden_modules = [
    "ludamus.gates",
    "ludamus.inits",
    "ludamus.specs",
    "ludamus.edges",
]


[[tool.importlinter.contracts]]
name = "inits"
type = "forbidden"
source_modules = ["ludamus.inits"]
forbidden_modules = ["ludamus.edges"]


[[tool.importlinter.contracts]]
name = "mills"
type = "forbidden"
source_modules = ["ludamus.mills"]
forbidden_modules = [
    "ludamus.gates",
    "ludamus.links",
    "ludamus.inits",
    "ludamus.edges",
    "django",
]


[[tool.importlinter.contracts]]
name = "pacts"
type = "forbidden"
source_modules = ["ludamus.pacts"]
forbidden_modules = [
    "ludamus.gates",
    "ludamus.links",
    "ludamus.inits",
    "ludamus.mills",
    "ludamus.specs",
    "ludamus.edges",
    "django",
]


[[tool.importlinter.contracts]]
name = "specs"
type = "forbidden"
source_modules = ["ludamus.specs"]
forbidden_modules = [
    "ludamus.gates",
    "ludamus.links",
    "ludamus.inits",
    "ludamus.mills",
    "ludamus.edges",
    "django",
]


[[tool.importlinter.contracts]]
name = "edges"
type = "forbidden"
source_modules = ["ludamus.edges"]
forbidden_modules = [
    "ludamus.gates",
    "ludamus.links",
    "ludamus.inits",
    "ludamus.mills",
    "ludamus.pacts",
    "ludamus.specs",
]


# VULTURE

[tool.vulture]
exclude = ["*/migrations/*.py"]
min_confidence = 61
