[project]
name = "ludamus"
version = "0.1.0"
description = "Event management website"
authors = [
    { name = "Radosław Ganczarek", email = "radoslaw@ganczarek.in" },
    { name = "hasparus", email = "hasparus@gmail.com" },
    { name = "lprasol", email = "lprasol@gmail.com" },
]
license = { text = "BSD-3-Clause license" }
readme = "README.md"
requires-python = ">=3.14.0,<3.15"
dynamic = ['dependencies']

[project.urls]
homepage = "https://zagrajmy.net/"
repository = "https://github.com/zagrajmy/ludamus"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
requires-poetry = ">=2.0,<3"

[tool.poetry.dependencies]
authlib = "~1.7.0"
cryptography = "^49.0.0"
django = "~6.0.7"
django-environ = "^0.14.0"
django-extensions = "^4.1"
django-vite = "==3.1.0"
google-auth = "^2.54.0"
gunicorn = "^26.0.0"
heroicons = { version = "^2.9", extras = ["django"] }
markdown = "^3.10.2"
nh3 = "^0.3.5"
pillow = "^12.1.1"
psycopg = "^3.2.9"
pydantic = "^2.11.7"
requests = "^2.32.5"
segno = "^1.6.6"
whitenoise = "^6.12.0"
django-storages = { extras = ["google"], version = "^1.14.6" }
dbos = ">=2.23.0"
unidecode = "^1.4.0"

[tool.poetry.group.dev.dependencies]
black = "^26.1.0"
codespell = "^2.4.1"
deptry = "^0.25.1"
django-browser-reload = "^1.21.0"
django-debug-toolbar = "^7.0.0"
django-stubs = "^6.0.5"
djlint = "^1.39.2"
factory-boy = "^3.3.3"
faker = "^40.28.1"
freezegun = "^1.5.2"
honcho = "^2.0.0"
ipython = "^9.14.1"
mypy = "^2.0.0"
pip-audit = "^2.10.1"
pylint = "^4.0.3"
pytest = "^9.0.1"
pytest-cov = "^7.0.0"
pytest-django = "^4.11.1"
pytest-factoryboy = "^2.8.1"
pytest-freezeblaster = "^2.0.4"
responses = "^0.26.0"
ruff = "^0.15.17"
types-authlib = "^1.5.0.20250516"
types-requests = "^2.32.4.20250809"

# BLACK
diff-cover = "^10.3.0"
import-linter = "^2.11"
vulture = "^2.16"
pytest-gremlins = "^1.8.1"
django-coverage-plugin = "^3.2.2"
yamllint = "1.38.0"
taplo = "^0.9.3"

[tool.black]
line-length = 88
preview = true
skip-magic-trailing-comma = true
target-version = ['py314']

# CODESPELL

[tool.codespell]
skip = 'node_modules,tests/e2e,*.po,*.lock,package-lock.json,vendor,src/ludamus/gates/web/django/theme/static_src/package-lock.json,CLAUDE.md,./.claude,./.agents,aube-lock.yaml,src/ludamus/client/package-lock.json,src/ludamus/static/vite'
# 'fallow' is the frontend analysis tool, not a misspelling of 'follow'.
# 'adres' is Polish for 'address' — real localized sheet headers ("Adres e-mail").
ignore-words-list = 'fallow,adres'

# COVERAGE

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "src/ludamus/edges/*",
    "src/ludamus/adapters/db/django/migrations/*",
    "src/ludamus/client/*",
    "tests/template_checks.py",
]
sigterm = true
plugins = ["django_coverage_plugin"]
core = "ctrace"

[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 2

[tool.coverage.django_coverage_plugin]
template_extensions = 'html'

# DJLINT

[tool.djlint]
ignore = "H021,H031,H037,D018"
custom_blocks = "select"

# DEPTRY

[tool.deptry]
known_first_party = ["ludamus"]

[tool.deptry.per_rule_ignores]
DEP002 = [
    "django-extensions",
    "django-vite",
    "gunicorn",
    "heroicons",
    "honcho",
    "psycopg",
    "pillow",
    "whitenoise",
    "django-storages",
]
DEP004 = ["debug_toolbar"]

# MYPY

[tool.mypy]
check_untyped_defs = true
color_output = true
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_expr = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
exclude = ["migrations/.*.py", "tests/.*.py"]
extra_checks = true
implicit_reexport = true
plugins = ["mypy_django_plugin.main", "pydantic.mypy"]
pretty = true
python_version = "3.14"
strict = true
strict_equality = true
strict_equality_for_none = true
warn_incomplete_stub = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.django-stubs]
django_settings_module = "ludamus.edges.settings"

[[tool.mypy.overrides]]
module = ["debug_toolbar.toolbar"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["environ"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["markdown"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "ludamus.adapters.db.django.*",
    "ludamus.adapters.web.django.*",
    "ludamus.edges.settings",
    "ludamus.gates.cli.django.management.commands.expire_offers",
    "ludamus.gates.web.django.*",
    "ludamus.links.db.django.*",
    "ludamus.links.ticket_api",
    "ludamus.links.google_docs",
]
disallow_any_expr = false

[[tool.mypy.overrides]]
module = ["ludamus.adapters.web.django.*", "ludamus.gates.web.django.*"]
disallow_any_explicit = false

# DBOS's class-method calls surface as Any (like Django's ORM elsewhere);
# relaxed only for the thin scheduler adapter that wraps them, the same way
# links.db.django.* is relaxed for the ORM.
[[tool.mypy.overrides]]
module = ["ludamus.inits.dbos_scheduler"]
disallow_any_expr = false

# pydantic's model_json_schema() returns dict[str, Any]; relaxed only for the
# registry module that embeds tool schemas into MCP responses.
[[tool.mypy.overrides]]
module = ["ludamus.gates.mcp.registry"]
disallow_any_expr = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true

# RUFF

[tool.ruff]
fix = false
line-length = 88
output-format = 'concise'
preview = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Unused
    "COM",
    "CPY",
    "D1",
    "FIX",
    "TD003",
    # Left to fix
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "PLR0915", # Too many statements
    "PLR0914", # Too many local variables
    "PLR1702", # Too many nested blocks
    "EM101",   # Exception must not use a string literal, assign to variable first
    "TRY003",  # Avoid specifying long messages outside the exception class
]

[tool.ruff.lint.per-file-ignores]
"*/migrations/**.py" = [
    "ANN",    # flake8-annotations
    "ARG001", # Unused arguments
    "E501",   # Line too long
    "RUF012", # ClassVar
]
"tests/**.py" = [
    "ANN",     # flake8-annotations
    "INP001",  # implicit namespace package
    "PLR0913", # too-many-arguments
    "PLR0917", # too-many-positional-arguments
    "S",       # bandit
    "PLR0904", # Too many public methods
    "PLR6301", # Method could be a function
]
# DI registries are intentionally wide: their whole job is to expose one leaf
# per repository/service. Bucketing them (see the class docstrings) is a
# separate refactor, not a per-leaf concern. `pacts/services.py` is the protocol
# mirror of the services registry, so it carries the same width by definition.
"*/inits/repositories.py" = ["PLR0904"]
"*/inits/services.py" = ["PLR0904"]
"*/pacts/services.py" = ["PLR0904"]
"scripts/*.py" = ["T201", "S404", "S603", "S607"]

[tool.ruff.lint.flake8-pytest-style]
parametrize-values-type = "tuple"

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.pydocstyle]
convention = "pep257"

# PYTEST

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "ludamus.edges.settings"

[tool.pytest-gremlins]
paths = ["src"]

exclude = ["**/migrations/*"]

report = ["console", "json"]

# IMPORT LINTER

[tool.importlinter]
include_external_packages = "True"
root_package = "ludamus"

# Explanation <source_modules> can't import <forbidden_modules>

[[tool.importlinter.contracts]]
name = "gates"
type = "forbidden"
source_modules = ["ludamus.gates"]
forbidden_modules = ["ludamus.links", "ludamus.inits", "ludamus.edges"]
# Management commands are composition entrypoints (like manage.py/wsgi): the
# cron jobs must build their service via the inits root.
ignore_imports = [
    "ludamus.gates.cli.django.management.commands.expire_offers -> ludamus.inits.services",
    "ludamus.gates.cli.django.management.commands.send_printables_reminders -> ludamus.inits.services",
]


[[tool.importlinter.contracts]]
name = "links"
type = "forbidden"
source_modules = ["ludamus.links"]
forbidden_modules = ["ludamus.gates", "ludamus.inits", "ludamus.specs", "ludamus.edges"]


[[tool.importlinter.contracts]]
name = "inits"
type = "forbidden"
source_modules = ["ludamus.inits"]
forbidden_modules = ["ludamus.edges"]


[[tool.importlinter.contracts]]
name = "mills"
type = "forbidden"
source_modules = ["ludamus.mills"]
forbidden_modules = [
    "ludamus.gates",
    "ludamus.links",
    "ludamus.inits",
    "ludamus.edges",
    "django",
]


[[tool.importlinter.contracts]]
name = "pacts"
type = "forbidden"
source_modules = ["ludamus.pacts"]
forbidden_modules = [
    "ludamus.gates",
    "ludamus.links",
    "ludamus.inits",
    "ludamus.mills",
    "ludamus.specs",
    "ludamus.edges",
    "django",
]


[[tool.importlinter.contracts]]
name = "specs"
type = "forbidden"
source_modules = ["ludamus.specs"]
forbidden_modules = [
    "ludamus.gates",
    "ludamus.links",
    "ludamus.inits",
    "ludamus.mills",
    "ludamus.edges",
    "django",
]


[[tool.importlinter.contracts]]
name = "edges"
type = "forbidden"
source_modules = ["ludamus.edges"]
forbidden_modules = [
    "ludamus.gates",
    "ludamus.links",
    "ludamus.inits",
    "ludamus.mills",
    "ludamus.pacts",
    "ludamus.specs",
]


# VULTURE

[tool.vulture]
exclude = [
    "*/migrations/*.py",
    "*/ludamus/edges/settings.py",
    "*/context_processors.py",
]
ignore_names = [
    # Used in templates
    "has_guests",
    "has_secret",
    "is_live",
    "is_pending_proposal",
    "is_read",
    "is_unlimited",
    "location_label",
    "overflow_count",
    "public_tag_categories",
    "public_tags",
    "should_show_as_inactive",
    "span",
    "spots_scarce",
    "unassigned_count",
    "unread_count",
    "user_bookmarked",
    "user_waiting",
    # Django
    "*Config",
    "add_arguments",
    "clean_*",
    "Command",
    "constraints",
    "db_table",
    "get_initial",
    "get_object",
    "get_template_names",
    "http_method_names",
    "list_display",
    "list_filter",
    "Meta",
    "ordering",
    # Used in settings
    "__call__",
    "*Middleware",
    "process_exception",
    "ViteAwareCompressedManifestStaticFilesStorage",
    # False positives
    "get_navbar",
    # Pydantic
    "model_config",
    # Unused but stays
    "deleted_at",
    "modification_time",
    "test_func",
]

ignore_decorators = [
    "@register.filter",
    "@register.simple_tag",
    "@admin.register",
    "@field_validator",
]
sort_by_size = true
